<resources>
    <string name="app_name">MemoryRoadApp</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="register_text">Register here</string>
    <string name="email_already_taken">Email is already in use by another account</string>
    <string name="sign_up_text_view">Don\'t have an account? Register here.</string>
    <string name="empty_fields_error">Fields cannot be empty</string>
    <string name="registration_completed">Registration was successful</string>
    <string name="registration_failure">Something went wrong</string>
    <string name="show_on_map_button">Show on map</string>
    <string name="add_location_button">Add location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">My Locations</string>
    <string name="title_edit_location">Edit location</string>
    <string name="title_add_location">Add location</string>
    <string name="media_rationale_message">Access to photos and media on your device is need to load image from gallery</string>
    <string name="geofence_option">Geofence</string>
    <string name="current_location">Current location</string>
    <string name="selected_location">Selected location</string>


    <!--Geofences string-->
    <string name="channel_name">GeofenceChannel</string>
    <string name="channel_description">Geofence status notification</string>

    <!--Notification strings-->
    <string name="arriving_at_text">You have arrived at </string>
    <string name="leaving_from_text">You have just left </string>
    <string name="suffix_text"> in your MemoryRoad.</string>

</resources>