<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="#D69191">

    <EditText
        android:id="@+id/email_edit_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white"
        android:hint="@string/hint_email"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/password_edit_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/first_name_edit_text_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text_sign_up"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text_sign_up"
        android:background="@android:color/white"
        android:hint="@string/hint_password"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/first_name_edit_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/last_name_edit_text_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text_sign_up"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_sign_up"
        android:background="@android:color/white"
        android:hint="@string/hint_first_name"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/last_name_edit_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/first_name_edit_text_sign_up"
        app:layout_constraintStart_toStartOf="@+id/first_name_edit_text_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text_sign_up"
        android:background="@android:color/white"
        android:hint="@string/hint_last_name"
        android:padding="10dp"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/last_name_edit_text_sign_up"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/last_name_edit_text_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text_sign_up"
        android:background="@android:color/white"
        android:padding="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>